Fix parsing of minimum values

When parsing values that are minimum finite values
(for example std::numeric_limits::min<int>), we end up ignoring
the sign when calling charactersToIntStrict. This method will
then use the std::numeric_limits::max values for parsing, and
since abs(max) is smaller than abs(min) it will bail out and
parseHTMLIntegerInternal will return false.

To fix this simply add the minus sign in the string to be
parsed by charactersToIntStrict.

BUG=653557

Review-Url: https://codereview.chromium.org/2363823004
Cr-Commit-Position: refs/heads/master@{#423595}

Former-commit-id: 54a7c25c0044c02449ee9366c9323ca1d2461b29